2005-12-19	Richard van den Berg  <richard@vdberg.org>
	* Revert check_list_for_match to old behaviour (Marc Haber)

2005-12-12	Richard van den Berg  <richard@vdberg.org>
	* Log tree matching verbosely, patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-15	Richard van den Berg  <richard@vdberg.org>
	* Applied 'allow removed files' patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-13	Richard van den Berg  <richard@vdberg.org>
	* Applied fix to ANF by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-07	Richard van den Berg  <richard@vdberg.org>
	* Applied 'allow new files' patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-03	Richard van den Berg  <richard@vdberg.org>
	* Remove russian translations; they are out of date and there is no static version of gettext available
	* Do not stop parsing directory at unescaped .
	* Fix "make dist" and "make check"
	* Added gpg scripts to contrib
	* Released version 0.11-rc2
	* Changed version to post-0.11-rc2

2005-10-30	Richard van den Berg  <richard@vdberg.org>
	* Warn if 'I' and 'c' are used together

2005-10-28	Richard van den Berg  <richard@vdberg.org>
	* Ignore 'c' when 'I' is in effect
	* Mention in aide.conf.5 that 'c' and 'I' are incompatible

2005-10-26	Richard van den Berg  <richard@vdberg.org>
	* Check for ino64_t and dirent64 separately since HPUX does not have them

2005-10-25	Richard van den Berg  <richard@vdberg.org>
	* Print start and stop timestamp together (Marc Haber <mh+aide@zugschlus.de>)
	* Print database_out path with -i and -u
	* Added bzip2.sh to the contrib directory

2005-10-19	Richard van den Berg  <richard@vdberg.org>
	* Applied patch from Debian bug #121717: aide spelling fixes

2005-10-16	Richard van den Berg  <richard@vdberg.org>
	* Applied patch 1124758: fix underquoted m4
	* Applied patch 1124757: dist-hook missing file snprintf.h
	* Applied patch 1124760: cleaner automake initialisation
	* Applied patch 1124782: gettextize related patch

2005-10-07	Richard van den Berg  <richard@vdberg.org>